// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ColorPicker Stateful Example 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <button
    className="colorPicker"
    data-testid="color-picker"
    style={
      Object {
        "backgroundColor": "#baa3fa",
        "color": "var(--black)",
      }
    }
  >
    C
  </button>
</div>
`;

exports[`Storyshots HomeRow Stateful 1`] = `
<div
  id="homeRow"
>
  <button
    className="homeRowButton selected"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={36}
      style={
        Object {
          "marginBottom": -6,
          "marginLeft": -6,
          "marginRight": -6,
          "marginTop": -6,
        }
      }
      viewBox="0 0 24 24"
      width={36}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
  <button
    className="homeRowButton"
    onClick={[Function]}
  >
    <svg
      className="icon"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Icon Specific Icon 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "var(--black)",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    style={
      Object {
        "borderColor": "transparent",
        "borderStyle": "solid",
        "borderWidth": 1,
        "lineHeight": 0,
      }
    }
  >
    <svg
      className="icon"
      fill="var(--white)"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        fill="var(--white)"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots MainPanelWithShrinkingSide Stateful Example 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <div
    className="mainPanelWithShrinkingSide"
    data-testid="main-panel-with-shrinking-side"
    style={
      Object {
        "height": 288,
      }
    }
  >
    <div
      className="shrinkingSidePanel"
      data-testid="shrinking-side-panel"
    >
      <div
        className="shrinkingPanelButton activeStyle"
        data-testid="shrinking-panel-button"
        onKeyDown={[Function]}
      >
        <a
          className="hoverColor"
          href="/"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "normal",
              }
            }
          >
            Sound Color Project
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </a>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyDown={[Function]}
      >
        <a
          className="hoverColor"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Color Patterns
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </a>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyDown={[Function]}
      >
        <a
          className="hoverColor"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Connections
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </a>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyDown={[Function]}
      >
        <a
          className="hoverColor"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Options
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </a>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyDown={[Function]}
      >
        <a
          className="hoverColor"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Sound Details
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </a>
      </div>
      <div
        className="shrinkingPanelButton"
        data-testid="shrinking-panel-button"
        onKeyDown={[Function]}
      >
        <a
          className="hoverColor"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <svg
            className="icon buttonIcon"
            height={24}
            style={
              Object {
                "marginBottom": -4,
                "marginLeft": -4,
                "marginRight": 6,
                "marginTop": -4,
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Actions
          </div>
          <svg
            className="icon buttonIcon"
            height={30}
            style={
              Object {
                "marginBottom": -5,
                "marginLeft": -5,
                "marginRight": -5,
                "marginTop": -5,
              }
            }
            viewBox="0 0 24 24"
            width={30}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="panelContentWrapper"
    >
      <div
        className="panelContent swapper"
        style={
          Object {
            "width": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Panel Contained 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <div
    style={
      Object {
        "height": 288,
        "width": 272,
      }
    }
  >
    <div
      className="panel"
      data-testid="panel"
    >
      <div
        className="panelTitle"
      >
        My Panel
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            This is a panel button
          </div>
        </a>
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            So is this
          </div>
        </a>
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            And another
          </div>
        </a>
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Just making enough
          </div>
        </a>
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            That it will require
          </div>
        </a>
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            The ability to scroll
          </div>
        </a>
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Does it work?
          </div>
        </a>
      </div>
      <div
        className="panelButton"
        data-testid="panel-button"
        style={Object {}}
      >
        <a
          className="hoverButton"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          target="_blank"
        >
          <div
            className="text"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            This one should also have ellipses due to it being a very long button name
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Panel Uncontained 1`] = `
<div
  className="panel"
  data-testid="panel"
>
  <div
    className="panelTitle"
  >
    My Panel
  </div>
  <div
    className="panelButton"
    data-testid="panel-button"
    style={Object {}}
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        This is a panel button
      </div>
    </a>
  </div>
  <div
    className="panelButton"
    data-testid="panel-button"
    style={Object {}}
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        So is this
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots PanelButton Example 1`] = `
<div
  className="panelButton"
  data-testid="panel-button"
  style={Object {}}
>
  <a
    className="hoverButton"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    target="_blank"
  >
    <div
      className="text"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    />
  </a>
</div>
`;

exports[`Storyshots PanelLayout With Content 1`] = `
<div
  className="panelLayout"
>
  <div
    className="layoutColumn"
  >
    <div
      className="gt-mobile grow center"
    />
    <div
      style={
        Object {
          "color": "#444",
          "padding": 10,
        }
      }
    >
      Foo
    </div>
    <div
      className="layoutSpacer"
    >
      <div
        className="lt-mobile grow center"
      />
    </div>
    <div
      className="afterSpacer"
    >
      <div
        style={
          Object {
            "background": "#888",
            "color": "white",
            "padding": 10,
          }
        }
      >
        Bar
      </div>
    </div>
    <div
      className="layoutFooter"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots PatternSelector Example 1`] = `
<div
  className="panel"
  data-testid="pattern-selector"
>
  <div
    className="panelTitle"
  >
    Color Patterns
  </div>
  <div
    className="panelButton"
    data-testid="pattern-button-chakras"
    style={
      Object {
        "--panel-button-active-background": "#006fe0",
        "--panel-button-active-color": "var(--white)",
        "--panel-button-hover-background": "#0080ff",
        "--panel-button-hover-color": "var(--black)",
      }
    }
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Chakras
      </div>
    </a>
  </div>
  <div
    className="panelButton"
    data-testid="pattern-button-chromesthesia"
    style={
      Object {
        "--panel-button-active-background": "#b9a57b",
        "--panel-button-active-color": "var(--black)",
        "--panel-button-hover-background": "#d3bd8d",
        "--panel-button-hover-color": "var(--black)",
      }
    }
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Chromesthesia
      </div>
    </a>
  </div>
  <div
    className="panelButton"
    data-testid="pattern-button-emotion"
    style={
      Object {
        "--panel-button-active-background": "#ba00bb",
        "--panel-button-active-color": "var(--white)",
        "--panel-button-hover-background": "#d400d6",
        "--panel-button-hover-color": "var(--white)",
      }
    }
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Emotion
      </div>
    </a>
  </div>
  <div
    className="panelButton"
    data-testid="pattern-button-chromotherapy"
    style={
      Object {
        "--panel-button-active-background": "#dd4b14",
        "--panel-button-active-color": "var(--white)",
        "--panel-button-hover-background": "#fc5719",
        "--panel-button-hover-color": "var(--black)",
      }
    }
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Chromotherapy
      </div>
    </a>
  </div>
  <div
    className="panelButton"
    data-testid="pattern-button-adolescence"
    style={
      Object {
        "--panel-button-active-background": "#14a58d",
        "--panel-button-active-color": "var(--black)",
        "--panel-button-hover-background": "#19bda2",
        "--panel-button-hover-color": "var(--black)",
      }
    }
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Adolescence
      </div>
    </a>
  </div>
  <div
    className="panelButton"
    data-testid="panel-button"
    style={
      Object {
        "--panel-button-active-background": "#c5aaa9",
        "--panel-button-active-color": "var(--black)",
        "--panel-button-hover-background": "#dbc9c8",
        "--panel-button-hover-color": "var(--black)",
      }
    }
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Custom
      </div>
      <svg
        className="icon buttonIcon"
        height={30}
        style={
          Object {
            "marginBottom": -5,
            "marginLeft": -5,
            "marginRight": -5,
            "marginTop": -5,
          }
        }
        viewBox="0 0 24 24"
        width={30}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use />
      </svg>
    </a>
  </div>
  <div
    className="panelButton"
    data-testid="panel-button"
    style={Object {}}
  >
    <a
      className="hoverButton"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      target="_blank"
    >
      <div
        className="text"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Saved
        <span
          className="suffixText"
        >
           - 
          0
        </span>
      </div>
      <svg
        className="icon buttonIcon"
        height={30}
        style={
          Object {
            "marginBottom": -5,
            "marginLeft": -5,
            "marginRight": -5,
            "marginTop": -5,
          }
        }
        viewBox="0 0 24 24"
        width={30}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Storyshots ShrinkingPanelButton Custom Text 1`] = `
<div
  className="shrinkingPanelButton"
  data-testid="shrinking-panel-button"
  onKeyDown={[Function]}
>
  <a
    className="hoverColor"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    target="_blank"
  >
    <svg
      className="icon buttonIcon"
      height={24}
      style={
        Object {
          "marginBottom": -4,
          "marginLeft": -4,
          "marginRight": 6,
          "marginTop": -4,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
    <div
      className="text"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Options
    </div>
    <svg
      className="icon buttonIcon"
      height={30}
      style={
        Object {
          "marginBottom": -5,
          "marginLeft": -5,
          "marginRight": -5,
          "marginTop": -5,
        }
      }
      viewBox="0 0 24 24"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </a>
</div>
`;

exports[`Storyshots ShrinkingPanelButton Example 1`] = `
<div
  className="shrinkingPanelButton"
  data-testid="shrinking-panel-button"
  onKeyDown={[Function]}
>
  <a
    className="hoverColor"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    target="_blank"
  >
    <svg
      className="icon buttonIcon"
      height={24}
      style={
        Object {
          "marginBottom": -4,
          "marginLeft": -4,
          "marginRight": 6,
          "marginTop": -4,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
    <div
      className="text"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Color Patterns
    </div>
    <svg
      className="icon buttonIcon"
      height={30}
      style={
        Object {
          "marginBottom": -5,
          "marginLeft": -5,
          "marginRight": -5,
          "marginTop": -5,
        }
      }
      viewBox="0 0 24 24"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </a>
</div>
`;

exports[`Storyshots ShrinkingPanelButton Long Text 1`] = `
<div
  className="shrinkingPanelButton"
  data-testid="shrinking-panel-button"
  onKeyDown={[Function]}
>
  <a
    className="hoverColor"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    target="_blank"
  >
    <svg
      className="icon buttonIcon"
      height={24}
      style={
        Object {
          "marginBottom": -4,
          "marginLeft": -4,
          "marginRight": 6,
          "marginTop": -4,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
    <div
      className="text"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
    </div>
    <svg
      className="icon buttonIcon"
      height={30}
      style={
        Object {
          "marginBottom": -5,
          "marginLeft": -5,
          "marginRight": -5,
          "marginTop": -5,
        }
      }
      viewBox="0 0 24 24"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use />
    </svg>
  </a>
</div>
`;

exports[`Storyshots ShrinkingSidePanel Example 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <div
    className="shrinkingSidePanel"
    data-testid="shrinking-side-panel"
  >
    ShrinkingSidePanel Component Content
  </div>
</div>
`;

exports[`Storyshots ShrinkingSidePanel With Shinking Buttons 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <div
    className="shrinkingSidePanel"
    data-testid="shrinking-side-panel"
  >
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyDown={[Function]}
    >
      <a
        className="hoverColor"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        target="_blank"
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Color Patterns
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </a>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyDown={[Function]}
    >
      <a
        className="hoverColor"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        target="_blank"
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Connections
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </a>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyDown={[Function]}
    >
      <a
        className="hoverColor"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        target="_blank"
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Options
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </a>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyDown={[Function]}
    >
      <a
        className="hoverColor"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        target="_blank"
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Sound Details
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </a>
    </div>
    <div
      className="shrinkingPanelButton"
      data-testid="shrinking-panel-button"
      onKeyDown={[Function]}
    >
      <a
        className="hoverColor"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        target="_blank"
      >
        <svg
          className="icon buttonIcon"
          height={24}
          style={
            Object {
              "marginBottom": -4,
              "marginLeft": -4,
              "marginRight": 6,
              "marginTop": -4,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
        <div
          className="text"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Actions
        </div>
        <svg
          className="icon buttonIcon"
          height={30}
          style={
            Object {
              "marginBottom": -5,
              "marginLeft": -5,
              "marginRight": -5,
              "marginTop": -5,
            }
          }
          viewBox="0 0 24 24"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextInput Knobs With Icon 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "var(--white)",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <div
    className="textInput"
    data-testid="text-input"
    style={
      Object {
        "maxWidth": "85vw",
        "width": 400,
      }
    }
  >
    <input
      data-testid="text-input-input"
      onChange={[Function]}
      value="I am a value"
    />
    <div
      className="placeholderText"
      data-testid="text-input-placeholder"
    >
      I am a placeholder
    </div>
    <svg
      className="icon"
      fill="var(--black)"
      height={24}
      style={
        Object {
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginTop": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        fill="var(--black)"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots TextInput Plain Knobs 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "var(--white)",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <div
    className="textInput"
    data-testid="text-input"
    style={
      Object {
        "maxWidth": "85vw",
        "width": 400,
      }
    }
  >
    <input
      data-testid="text-input-input"
      onChange={[Function]}
      value="I am a value"
    />
    <div
      className="placeholderText"
      data-testid="text-input-placeholder"
    >
      I am a placeholder
    </div>
  </div>
</div>
`;

exports[`Storyshots TextInput Stateful 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "var(--white)",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <div
    className="textInput"
    data-testid="text-input"
    style={
      Object {
        "maxWidth": "85vw",
        "width": 400,
      }
    }
  >
    <input
      data-testid="text-input-input"
      onChange={[Function]}
      value=""
    />
    <div
      className="placeholderText"
      data-testid="text-input-placeholder"
    >
      I am a placeholder
    </div>
  </div>
</div>
`;
